<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Singleton</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="host">Host</string>
    <string name="puerto">Puerto</string>
    <string name="instrucciones">Teclea los siguientes datos
    de tu unica instancia de base de datos:</string>
    <string name="crear_base">Crear BD</string>
    <string name="editar_base">Editar BD</string>



</resources>
